--- a/app/views/games/update.turbo_stream.erb
+++ b/app/views/games/update.turbo_stream.erb
@@ -1,3 +1,3 @@
 <%= turbo_stream.update "field" do %>
-  <%= render partial: "games/field", locals: { field: @game.field_array, count: @game.count } %>
+  <%= render partial: "games/field", locals: { field: @game.field_array(@snake) } %>
 <% end %>
