--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,8 +1,3 @@
-<h3>Игра: Змейка</h3>
-<div><%= cookies[:snake] %></div>
-<div><%= cookies[:snake].class %></div>
 <div data-controller="game" data-game-game-id-value="<%= @game.id %>">
-  <div id="field">
-    <%= render partial: "games/field", locals: { field: @game.field_array(@snake) } %>
-  </div>
+  <%= render partial: "games/field", locals: { field: @game.field_array(@snake), snake: @snake, game_over: @game_over } %>
 </div>
