--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,3 +1,3 @@
 <div data-controller="game" data-game-game-id-value="<%= @game.id %>">
-  <%= render partial: "games/field", locals: { field: @game.field_array(@snake), snake: @snake, game_over: @game_over } %>
+  <%= render partial: "games/field", locals: { field: @game.field_array(@snake), game_over: @game_over } %>
 </div>
