--- a/app/views/games/update.turbo_stream.erb
+++ b/app/views/games/update.turbo_stream.erb
@@ -1,3 +1,3 @@
 <%= turbo_stream.replace "field" do %>
-  <%= render partial: "games/field", locals: { field: @game.field_array(@snake), snake: @snake, game_over: @game_over } %>
+  <%= render partial: "games/field", locals: { field: @game.field_array(@snake), game_over: @game_over } %>
 <% end %>
