before service snake_state

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,4 +1,27 @@
-<h1>Game Python</h1>
-
+<h1>Game Python </h1>
 <%= button_to 'New game', games_path, turbo_method: :post %>
 
+<div>
+  <ul>Це класична гра пітон (змія).</ul>
+  <ul>Зараз розмір поля статичний: 130x27</ul>
+  <ul>Рух відбувається за допомогою клавіш - стрілочок.</ul>
+  <ul>ESCAPE - вихід з гри.</ul>
+  <ul> Ви програєте, якщо:
+    <li>Вийдете за межі поля</li>
+    <li>Голова стикнеться з тілом</li>
+    <li>Голова стикнеться з перешкодою</li>
+  </ul>
+
+  <ul>По закінченню гри буде вказата причина програшу, та ви вийдете на головну сторінку.</ul>
+  <ul></ul>
+  <ul>Плани на майбутне:
+    <li>Розмір поля задає користувач.</li>
+    <li>Додавання статистики гри.</li>
+    <li>Додавання перешкод.</li>
+    <li>Додавання яблук.</li>
+    <li>Додвання рівней складності.</li>
+    <li>Реєстрація гравців та збереження їх статистики.</li>
+    <li>Дві мови, українська та англійська.</li>
+    <li>Можливість грати на мобільних пристроях</li>
+  </ul>
+</div>
