add service SnakeState

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -15,6 +15,7 @@
   <ul>По закінченню гри буде вказата причина програшу, та ви вийдете на головну сторінку.</ul>
   <ul></ul>
   <ul>Плани на майбутне:
+    <li>Оформлення за допомогою Bootstrap.</li>
     <li>Розмір поля задає користувач.</li>
     <li>Додавання статистики гри.</li>
     <li>Додавання перешкод.</li>
