--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,10 +1,11 @@
-<h1>Game Python </h1>
+<h1>Game Python V.1.0</h1>
 <%= button_to 'New game', games_path, turbo_method: :post %>
 
 <div>
-  <ul>Це класична гра пітон (змія).</ul>
+  <ul>Це класична гра пітон (змія). Пітон (oooooS) повзає по полю, збирає яблука ( @ ) та росте. Може зіткнутися з перешкодою ( # ).</ul>
   <ul>Зараз розмір поля статичний: 130x27</ul>
   <ul>Рух відбувається за допомогою клавіш - стрілочок.</ul>
+  <ul>Частота оновлення 0.3 секунд.</ul>
   <ul>ESCAPE - вихід з гри.</ul>
   <ul> Ви програєте, якщо:
     <li>Вийдете за межі поля</li>
@@ -18,7 +19,6 @@
     <li>Оформлення за допомогою Bootstrap.</li>
     <li>Розмір поля задає користувач.</li>
     <li>Додавання статистики гри.</li>
-    <li>Додавання перешкод.</li>
     <li>Додавання яблук.</li>
     <li>Додвання рівней складності.</li>
     <li>Реєстрація гравців та збереження їх статистики.</li>
