--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,9 +1,11 @@
-<h1>Game Python V.1.0</h1>
+<h1>Game Python V_1.0</h1>
 <%= button_to 'New game', games_path, turbo_method: :post %>
 
 <div>
-  <ul>Це класична гра пітон (змія). Пітон (oooooS) повзає по полю, збирає яблука ( @ ) та росте. Може зіткнутися з перешкодою ( # ).</ul>
+  <ul>Це класична гра пітон (змія). Пітон (ooooos) повзає по полю, збирає яблука ( @ ) та росте. Може зіткнутися з перешкодою ( # ).</ul>
   <ul>Зараз розмір поля статичний: 130x27</ul>
+  <ul>Яблук ( @ ) - 30 шт., коли з'їли - з'являється в іншому місці.</ul>
+  <ul>Перешкод ( # ) - 30 шт.</ul>
   <ul>Рух відбувається за допомогою клавіш - стрілочок.</ul>
   <ul>Частота оновлення 0.3 секунд.</ul>
   <ul>ESCAPE - вихід з гри.</ul>
@@ -19,7 +21,6 @@
     <li>Оформлення за допомогою Bootstrap.</li>
     <li>Розмір поля задає користувач.</li>
     <li>Додавання статистики гри.</li>
-    <li>Додавання яблук.</li>
     <li>Додвання рівней складності.</li>
     <li>Реєстрація гравців та збереження їх статистики.</li>
     <li>Дві мови, українська та англійська.</li>
