--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,27 @@
 // Sassy
 // @import  "bootstrap" ;
 @use "bootstrap" as *;
+
+.ascii-block {
+  // сбрасываем контейнерные стили
+  padding: 0;
+  margin: 0;
+  border: none;
+  background: none;
+  font-family: monospace;
+  line-height: 1;
+  font-size: 20px; // или нужный тебе
+  color: inherit;
+
+  pre {
+    margin: 0;
+    padding: 0;
+    font-family: monospace;
+    font-size: inherit;
+    line-height: inherit;
+    background: transparent;
+    border: none;
+    white-space: pre;
+    color: inherit;
+  }
+}
