--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,8 +1,21 @@
 <header class="p-1 my-3 bg-secondary text-white">
-  <nav class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-    <h1>Game Python V_1.0</h1>
+  <nav class="container d-flex align-items-center">
+    <h1 class="mb-0">Game Python V_1.0</h1>
+
+    <div class="ms-auto d-flex align-items-center">
+      <% if user_signed_in? %>
+        <span class="me-2">Привіт, <%= current_user.username %>!</span>
+        <%= link_to "Вийти", session_path, method: :delete, class: "btn btn-outline-light" %>
+      <% else %>
+        <%= link_to "Вхід", new_session_path, data: { turbo_frame: 'login' }, class: "btn btn-outline-light me-2" %>
+        <%= link_to "Реєстрація", new_user_path, data: { turbo_frame: 'registration' }, class: "btn btn-outline-light" %>
+      <% end %>
+    </div>
   </nav>
 </header>
+
+<%= turbo_frame_tag 'login' %>
+<%= turbo_frame_tag 'registration' %>
 
 <div class="container">
   <div class="row">
