--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag "registration" do %>
+<%= turbo_frame_tag "login" do %>
   <div class="d-flex justify-content-center my-3">
     <div class="border rounded p-3" style="min-width: 320px;">
       <%= form_with  model: @user, class: "p-3", local: true do |f| %>
