finished turbo_frame form

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,7 +15,7 @@
 
         <div class="mb-2" style="max-width: 300px;">
           <%= f.label :username, class: "form-label small" %>
-          <%= f.email_field :username, value: params[:username], placeholder: 'Username', class: 'form-control form-control-sm' %>
+          <%= f.text_field :username, value: params[:username], placeholder: 'Username', class: 'form-control form-control-sm' %>
         </div>
 
         <div class="mb-2" style="max-width: 300px;">
